# SynTemp

./: .coverage  .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  build-doc.sh  clean_code.ipynb  golden_cgrtool_check.csv  lint.sh  mod_test.py  pyproject.toml  pytest.sh  requirements.txt  retro.py  scripts.py  setup.py  test.ipynb  test.py  test2.py  test_auto.py  test_comp.py  test_h.py  test_hier.py  test_rule_com.py
.github/workflows/: publish-package.yml  test-and-lint.yml  verify-pypi-install.yml
Data/: reactions.json
Data/AAM/: aam_benchmark.json
Data/DA/: Diels-Alder_synthetic_data.json  test.json  train.json
Data/aam_benchmark/: benchmark.csv
Data/ecoli/: ecoli.smiles
Data/uspto_sample/: 30602.gml
Docs/Analysis/: _0_cgrtool_aam.py  _0_tool_benchmark.ipynb  _1_template_extraction.ipynb  _2a_run_aam.py  _2b_aam_analysis.ipynb  _3_cgrtool_aam.py  _3_tool_benchmark.ipynb  _4_rules_cluster.ipynb  _4_templates_analysis.ipynb  _4a_its.py  _4a_test_cluster_time.py  _4b_hier_cluster.py  _4b_test_hier_cluster_time.py  _4c_20_rule_gen_fig.py  _5_mod.py  _5_rule_application.ipynb  _5_rule_apply.py  _5_synthesis.ipynb  _6_rule_comp.py  _6_rule_expansion.py  _analysis.py  _plot_analysis.py  _rules_cluster.ipynb  _templates_analysis.ipynb  _test_cluster_time.py  _test_hier_cluster_time.py  balance_aam.py  composed_rule_gen_fig.py  tautomer_issue.ipynb
Docs/Notebook/: 1_clean_reactions.py  2_aam.py  3_itsg.py  4_templates_align.py  5_retro_benchmarking.py  6_rdecoy_gen.py  Example.ipynb
Notebook/: .gitignore  1_clean_reactions.py  2_aam.py  3_itsg.py  Example.ipynb
SynTemp/: __main__.py  aam.py  auto_template.py  lib_isomorphism.py  pipeline.py  run_compose.py  utils.py
SynTemp/SynAAM/: __init__.py  aam_postprocess.py  aam_validator.py  atom_map_consensus.py  atom_mappers.py  consensus_aam.py  graphormer_wrapper.py  local_mapper_wrapper.py  rdt_wrapper.py  run_consensus.py  rxn_mapper_wrapper.py
SynTemp/SynChemistry/: balance_checker.py  deionize.py  graph_to_mol.py  mol_to_graph.py  neutralize.py  reduce_reactions.py  sf_factory.py  sf_maxfrag.py  sf_random.py  sf_similarity.py  similarity_ranking.py  standardize.py  tautomerize.py
SynTemp/SynComp/: rule_compose.py  valence_constrain.py
SynTemp/SynITS/: graph_rules_extraction.py  its_construction.py  its_extraction.py  its_hadjuster.py  its_refinement.py  uncertain_refinement.py
SynTemp/SynMØD/: MØD_modeling.py  MØD_postprocess.py  MØD_rules.py  graph_rules_decompose.py  mod_backup.py  naive_cluster.py  rule_benchmark.py  rule_cluster.py  rule_decompose.py  rule_engine.py  rule_executor.py  similarity_ranking.py
SynTemp/SynProcessor/: balance_checker.py  graph_to_mol.py  mol_to_graph.py  reaction_processor.py  smiles_standardizer.py  unbalanced_charge.py  uncharge_reaction.py
SynTemp/SynRule/: hier_engine.py  hierarchical_clustering.py  rdecoy.py  rule_benchmark.py  rule_cluster.py  (+6 more)
Test/: test_auto_template.py  test_main.py  test_pipeline.py
doc/: conf.py  getting_started.rst  index.rst  reference.rst  refs.bib  tutorial.rst
scripts/: aam_pilot.py  raw_results.txt  retro.py  retro.sh  scripts.py  synrbl_pilot.py  test_aam.py  test_hier.py
syntemp/: __main__.py  auto_template.py  lib_isomorphism.py  pipeline.py  run_compose.py
(+166 files in other folders)
