[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syntemp"
version = "0.0.2"
authors = [
    {name="Tieu Long Phan", email="tieu@bioinf.uni-leipzig.de"}
]
description = "Test."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dgl==2.1.0",
    "dgllife==0.3.2",
    "localmapper==0.1.3",
    "rxn-chem-utils==1.5.0",
    "rxn-utils==2.0.0",
    "rxnmapper==0.3.0",
    "chython==1.75",
    "chytorch==1.60",
    "chytorch-rxnmap==1.4",
    "torchdata==0.7.1",
    "rdkit==2023.9.5",
    "networkx==3.3",
    "fgutils==0.0.17",
    "seaborn==0.13.2",
    "joblib==1.3.2"
    "synrbl==0.0.23"
]

[project.urls]
homepage = "https://github.com/TieuLongPhan/SynTemp"
source = "https://github.com/TieuLongPhan/SynTemp"
issues = "https://github.com/TieuLongPhan/SynTemp/issues"
