[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syntemp"
version = "1.0.1"
authors = [
    {name="Tieu Long Phan", email="tieu@bioinf.uni-leipzig.de"}
]
description = "Graph-based reaction templates extraction"
readme = "README.md"
long-description = {file = "CHANGELOG.md"} 
long-description-content-type = "text/markdown"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "synrbl>=1.0.1",
    "synkit>=0.0.9"
]

[project.optional-dependencies]
all = [
    "dgl==2.1.0",
    "dgllife==0.3.2",
    "localmapper>=0.1.5",
    "rxn-chem-utils>=1.6.0",
    "rxn-utils>=2.0.0",
    "rxnmapper>=0.4.1",
    "chython==1.78",
    "chytorch>=1.65",
    "chytorch-rxnmap>=1.4",
    "torch==2.2.0",
    "torchdata==0.7.1",
    "transformers==4.51.1"
]

[project.urls]
homepage = "https://github.com/TieuLongPhan/SynTemp"
source = "https://github.com/TieuLongPhan/SynTemp"
issues = "https://github.com/TieuLongPhan/SynTemp/issues"